infrastructure/sonarqube/04-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarqube-route
  namespace: sonarqube
spec:
  parentRefs:
  - name: portfolio-gateway
    namespace: portfolio-prod
  hostnames:
  - "sonarqube.vividp.cloud"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: sonarqube
      port: 9000
